adding search box

--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,3 +1,17 @@
-<p>
-  book-list works!
-</p>
+<div class="container">
+  <div class="m-3 text-center">
+    <form class="form-inline">
+      <div class="form-group">
+        <input type="search" class="form-control" placeholder="Enter search string" [formControl]="searchTerm" required (keyup)="searchBooks($event)">
+      </div>
+      <button type="submit" class="btn btn-primary">
+        Search
+      </button>
+    </form>
+  </div>
+</div>
+<ul>
+  <li *ngFor="let item of bookHolder?.items">
+    {{item.volumeInfo.title}}
+  </li>
+</ul>
