--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
+
+.mr-1 {
+  margin-right: 2px;
+}
+
+.ml-1 {
+  margin-left: 2px;
+}
+
+.m-1 {
+  margin: 1em;
+}
+
+.m-2 {
+  margin: 2em;
+}
+
+.m-3 {
+  margin: 3em;
+}
