--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,17 +1,52 @@
 <div class="container">
-  <div class="m-3 text-center">
-    <form class="form-inline">
-      <div class="form-group">
-        <input type="search" class="form-control" placeholder="Enter search string" [formControl]="searchTerm" required (keyup)="searchBooks($event)">
+  <div class="m-3 text-center .col-lg-*">
+    <form class="form-group">
+      <div class="input-group">
+        <input class="form-control py-2 border-right-0 border" type="search" [formControl]="searchTerm" id="example-search-input"
+          (keyup)="onKeyup($event)">
+        <span class="input-group-append">
+          <div class="input-group-text bg-transparent" (click)="onClick($event)"><i class="fa fa-search"></i></div>
+        </span>
       </div>
-      <button type="submit" class="btn btn-primary">
-        Search
-      </button>
     </form>
   </div>
+  <div class="loading" *ngIf="loading">
+    <p>Wait! Loading data..</p>
+  </div>
+  <!-- <ul>
+    <li *ngFor="let item of bookHolder?.items">
+      {{item.volumeInfo.title}}
+    </li>
+  </ul> -->
+  <div class="scrollable-y-table">
+    <div class="table-responsive table-striped table-sm">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th>Title</th>
+            <th>Authors</th>
+            <th>Publisher</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of bookHolder?.items">
+            <td>{{item.volumeInfo.title}}</td>
+            <td>{{item.volumeInfo.authors}}</td>
+            <td>{{item.volumeInfo.publisher}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="table-paginator">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
-<ul>
-  <li *ngFor="let item of bookHolder?.items">
-    {{item.volumeInfo.title}}
-  </li>
-</ul>
