--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" routerLink="">Angular & Bootstrap</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="home">Home</a>
+      <a class="nav-item nav-link active" href="">Home</a>
       <a class="nav-item nav-link" href="books">Books</a>
       <a class="nav-item nav-link" href="library">Library</a>
       <a class="nav-item nav-link" href="about">About</a>
